--- a/GCN_interpretation.ipynb
+++ b/GCN_interpretation.ipynb
@@ -412,7 +412,7 @@
     "#         plot_molecule(smiles[idx],size=(900, 600))\n",
     "\n",
     "\n",
-    "        for layer_idx in np.arange(4,5):\n",
+    "        for layer_idx in np.arange(4,5): # last layer\n",
     "            model_output = model.get_layer(\"multi_graph_cnn_%d\"%layer_idx).output\n",
     "            m = Model(inputs=model.input, outputs=model_output)\n",
     "            final_gcn_layer_out = m.predict([X[idx][np.newaxis,:],gcn_filters[idx][np.newaxis,:]])\n",
@@ -424,11 +424,11 @@
     "                    r,_=pearsonr(i_vec, j_vec)\n",
     "                    atom_by_atom[i,j]=r\n",
     "\n",
-    "#             plt.figure(figsize=(15,12))\n",
-    "#             sns.heatmap(atom_by_atom)\n",
-    "#             plt.title('GCN layer %d'%layer_idx)\n",
-    "#             plt.show()\n",
-    "#             plt.close()\n",
+    "            plt.figure(figsize=(15,12))\n",
+    "            sns.heatmap(atom_by_atom)\n",
+    "            plt.title('GCN layer %d'%layer_idx)\n",
+    "            plt.show()\n",
+    "            plt.close()\n",
     "\n",
     "        res_dict['atom_by_atom_pearson_repeat_%d'%repeat]+=[atom_by_atom] # all by all from last gcn layer\n",
     "    K.clear_session()\n",
